@@ -1,34 +1,35 @@
 package com.endava.cats.generator.format.impl;
 
 import com.endava.cats.generator.format.api.OpenAPIFormat;
+import com.endava.cats.generator.format.api.PropertySanitizer;
 import com.endava.cats.generator.format.api.ValidDataFormatGenerator;
 import com.endava.cats.util.CatsUtil;
 import io.swagger.v3.oas.models.media.Schema;
 import jakarta.inject.Singleton;
 
 import java.util.List;
-import java.util.Locale;
 
 /**
- * A generator class implementing interfaces for generating valid International Reference Numbers (IRN) data formats.
- * It implements the ValidDataFormatGenerator and OpenAPIFormat interfaces.
+ * Generates random time of day in HH:mm format.
  */
 @Singleton
-public class IRIGenerator implements ValidDataFormatGenerator, OpenAPIFormat {
+public class TimeOfDayGenerator implements ValidDataFormatGenerator, OpenAPIFormat {
     @Override
     public Object generate(Schema<?> schema) {
-        String generated = CatsUtil.faker().ancient().god().toLowerCase(Locale.ROOT);
+        int hour = CatsUtil.random().nextInt(24);
+        int minute = CatsUtil.random().nextInt(60);
 
-        return "https://ë-%s.com/cats".formatted(generated);
+        return String.format("%02d:%02d", hour, minute);
     }
 
     @Override
     public boolean appliesTo(String format, String propertyName) {
-        return "iri".equalsIgnoreCase(format);
+        return PropertySanitizer.sanitize(propertyName).endsWith("time") &&
+                !"time".equalsIgnoreCase(format);
     }
 
     @Override
     public List<String> matchingFormats() {
-        return List.of("iri");
+        return List.of("time");
     }
 }
